fix dark mode, fix pages

--- a/style.css
+++ b/style.css
@@ -50,15 +50,15 @@ form{
   width: 23%;
 }
 
-#search-button{
+
+button{
   border: none;
   border-radius: 20px;
 
   background-color: black;
   color: white;
 
-  padding: 0.5vh;
-  width: 20%;
+  padding: 1vh;
 
   cursor: pointer;
 }
@@ -85,22 +85,17 @@ section{
   margin: 25px;
 }
 
+
 #show-more-button{
-  background-color: black;
-  color: white;
-
-  border-radius: 30px;
-  border: none;
-
-  padding: 2vh;
-  width: 10%;
   margin-bottom: 2vh;
-
-  cursor: pointer;
 
   font-size: 16px;
   font-weight: bold;
+
+  width: 10%;
 }
+
+
 
 .dark-mode{
   background-color: black;
@@ -108,7 +103,7 @@ section{
 }
 
 .button-dark-mode{
-  background-color: white;
+  background-color: white !important;
   color: black;
 }
   
